# orange-os

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  functions.cmake
arch/: CMakeLists.txt  riscv_isa.h  riscv_plic.cc  riscv_plic.h  riscv_reg.cc  riscv_reg.h
driver/: CMakeLists.txt  basic_device.h  device_factory.cc  device_factory.h  negotiater_mmio.h  transport_mmio.h  uart.cc  uart.h  virtio.cc  virtio.h  virtio_blk.cc  virtio_blk.h  virtio_gpu.cc  virtio_gpu.h  virtio_input.cc  virtio_input.h  virtio_net.cc  virtio_net.h
filesystem/: CMakeLists.txt  common.cc  common.h  file_descriptor.h  filestream.cc  filestream.h  inode_def.cc  inode_def.h  mkfs.cc  mkfs_fat.py
kernel/: CMakeLists.txt  console.cc  console.h  context_switch.S  context_switch_kernel.S  context_switch_user.S  cpu.h  entry.S  exception_table.S  extern_controller.cc  extern_controller.h  global_channel.cc  global_channel.h  printf.cc  printf.h  process.cc  process.h  regs_frame.h  regs_frame.hpp  resource.h  resource_factory.cc  resource_factory.h  scheduler.cc  scheduler.h  start.cc  switch.S  timer_handler.S  trap.cc  trap.h  utils.cc  utils.h  virtual_memory.cc  virtual_memory.h
kernel/config/: memory_layout.h  system_param.h
kernel/linker/: kernel_riscv.ld
kernel/lock/: CMakeLists.txt  critical_guard.cc  critical_guard.h  spin_lock.cc  spin_lock.h
kernel/sys_def/: descriptor_def.h  device_info.h  input_event_code.h  syscall_err.h
kernel/syscalls/: CMakeLists.txt  define.h  dynamic_loader.cc  dynamic_loader.h  elf_def.h  execute.cc  impl.cc  manager.cc  manager.h  static_loader.cc  static_loader.h  syscall.cc  syscall.h  syscall_num_def.h  utils.cc  utils.h
lib/: CMakeLists.txt  assert.cc  assert.h  common.cc  common.h  function.h  gen_syscall_impl.py  lib.h  math_utils.cc  math_utils.h  memory.cc  memory.h  printf.cc  printk.cc  printk.h  singleton.h  smart_pointer.h  streambase.cc  streambase.h  string.cc  string.h  stringpp.cc  stringpp.h  stringstream.cc  stringstream.h  sys_dl.S  sys_dl.cc  syscall.h  types.h  vector.h
tools/: CMakeLists.txt  gen_frame_offset.py  gen_initcode.cc
user/: CMakeLists.txt  cat.cc  cp.cc  echo.cc  init.cc  init_loader.S  lcd.cc  ls.cc  mandelbrot.cc  mkdir.cc  pwd.cc  sh.cc  time.cc  view.cc
user/graphic/: CMakeLists.txt  image_viewer.cc  image_viewer.h
user/resource/: README.txt
user/runtime/: CMakeLists.txt  startup.cc
